--- a/index.html
+++ b/index.html
@@ -2142,16 +2142,115 @@ async function renderRutinas() {
 			applyPermissions(); // Re-aplicamos permisos para ocultar botones de editar a quien no corresponda
 		}
 
-        async function loadStaff() {
-            const profs = await apiFetch('/profesores'); const admins = await apiFetch('/administrativos');
-            state.profesores = Array.isArray(profs) ? profs : []; state.administrativos = Array.isArray(admins) ? admins : [];
-            const hideEdit = state.user?.rol_nombre !== "Administrador" && state.user?.rol_nombre !== "Supervisor";
-            document.getElementById('cl-coach-select').innerHTML = '<option value="">Seleccionar Profesor</option>' + state.profesores.map(p => `<option value="${p.nombre_completo}">${p.nombre_completo}</option>`).join('');
-            document.getElementById('table-profesores').innerHTML = state.profesores.map(p => `<tr class="viking-table-row"><td class="py-6 text-left">${p.nombre_completo}</td><td class="py-6 text-gray-500">${p.dni}</td><td class="py-6 text-red-600 font-black">${p.especialidad || 'Gral.'}</td><td class="py-6 text-right action-col">${hideEdit ? '' : `<button onclick="openEditStaff(${p.id}, 'Profesor')" class="hover:text-red-600"><i data-lucide="edit-3" class="w-4 h-4"></i></button>`}</td></tr>`).join('');
-            document.getElementById('table-administrativos').innerHTML = state.administrativos.map(a => `<tr class="viking-table-row"><td class="py-6 text-left">${a.nombre_completo}</td><td class="py-6 text-gray-500">${a.dni}</td><td class="py-6 text-gray-500 lowercase">${a.email || '-'}</td><td class="py-6 text-right action-col">${hideEdit ? '' : `<button onclick="openEditStaff(${a.id}, 'Administracion')" class="hover:text-red-600"><i data-lucide="user-cog" class="w-4 h-4"></i></button>`}</td></tr>`).join('');
-            lucide.createIcons();
-            applyPermissions();
-        }
+		// --- REEMPLAZA TU FUNCIÓN loadStaff POR ESTA NUEVA VERSIÓN VISUAL ---
+		async function loadStaff() {
+			// 1. Obtener datos
+			const [p, a] = await Promise.all([
+				apiFetch('/profesores'),
+				apiFetch('/administrativos')
+			]);
+			state.profesores = Array.isArray(p) ? p : [];
+			state.administrativos = Array.isArray(a) ? a : [];
+
+			// 2. TRANSFORMACIÓN VISUAL: PROFESORES
+			const profTable = document.querySelector('#view-profesores table');
+			const profListId = 'profesores-list-view';
+			let profContainer = document.getElementById(profListId);
+
+			// Si existe la tabla antigua, la reemplazamos por el contenedor de tarjetas
+			if (!profContainer && profTable) {
+				profContainer = document.createElement('div');
+				profContainer.id = profListId;
+				profContainer.className = "flex flex-col gap-3";
+				if (profTable.parentNode) profTable.parentNode.replaceChild(profContainer, profTable);
+			}
+
+			if (profContainer) {
+				if (state.profesores.length === 0) {
+					profContainer.innerHTML = '<div class="text-center py-10"><i data-lucide="user-x" class="w-12 h-12 text-gray-600 mx-auto mb-4"></i><p class="text-gray-500 italic">No hay profesores registrados.</p></div>';
+				} else {
+					profContainer.innerHTML = state.profesores.map(u => createStaffRow(u, 'Profesor')).join('');
+				}
+			}
+
+			// 3. TRANSFORMACIÓN VISUAL: ADMINISTRATIVOS
+			const admTable = document.querySelector('#view-administrativos table');
+			const admListId = 'administrativos-list-view';
+			let admContainer = document.getElementById(admListId);
+
+			if (!admContainer && admTable) {
+				admContainer = document.createElement('div');
+				admContainer.id = admListId;
+				admContainer.className = "flex flex-col gap-3";
+				if (admTable.parentNode) admTable.parentNode.replaceChild(admContainer, admTable);
+			}
+
+			if (admContainer) {
+				if (state.administrativos.length === 0) {
+					admContainer.innerHTML = '<div class="text-center py-10"><i data-lucide="shield-alert" class="w-12 h-12 text-gray-600 mx-auto mb-4"></i><p class="text-gray-500 italic">No hay administrativos registrados.</p></div>';
+				} else {
+					admContainer.innerHTML = state.administrativos.map(u => createStaffRow(u, 'Administracion')).join('');
+				}
+			}
+
+			// Actualizar selectores en modales (como en crear clase)
+			const coachSelect = document.getElementById('cl-coach-select');
+			if (coachSelect) {
+				coachSelect.innerHTML = '<option value="">Seleccionar Coach</option>' + 
+					state.profesores.map(x => `<option value="${x.nombre_completo}">${x.nombre_completo}</option>`).join('');
+			}
+
+			if (window.lucide) lucide.createIcons();
+			applyPermissions(); // Asegurar que solo Admin/Supervisor vea los botones de editar
+		}
+
+			// --- NUEVA FUNCIÓN AUXILIAR PARA CREAR TARJETAS DE STAFF ---
+			function createStaffRow(u, type) {
+				const initials = u.nombre_completo ? u.nombre_completo.split(' ').map(n=>n[0]).join('').substring(0,2).toUpperCase() : "??";
+				const roleLabel = type === 'Profesor' ? 'Coach / Especialidad' : 'Cargo / Función';
+				const roleValue = u.especialidad || (type === 'Profesor' ? 'Entrenador General' : 'Administrativo');
+				
+				// Icono según tipo
+				const icon = type === 'Profesor' ? 'dumbbell' : 'shield-check';
+
+				return `
+				<div class="glass-card p-4 rounded-3xl border-white/5 flex flex-col md:flex-row md:items-center gap-4 hover:border-red-600/20 transition-all group relative overflow-hidden">
+					<!-- Barra lateral decorativa -->
+					<div class="absolute left-0 top-0 bottom-0 w-1 bg-red-600 opacity-30 group-hover:opacity-100 transition-opacity"></div>
+					
+					<!-- Info Principal -->
+					<div class="flex items-center gap-4 flex-1">
+						<div class="w-12 h-12 rounded-2xl bg-white/5 border border-white/10 flex items-center justify-center font-black text-white text-sm italic shadow-lg group-hover:bg-red-600 group-hover:text-black transition-colors">
+							${initials}
+						</div>
+						<div>
+							<h4 class="text-sm font-black uppercase italic text-white group-hover:text-red-500 transition-colors">${u.nombre_completo}</h4>
+							<div class="flex flex-wrap gap-x-4 gap-y-1 mt-1">
+								<p class="text-[10px] text-gray-500 font-bold flex items-center gap-1"><i data-lucide="id-card" class="w-3 h-3"></i> ${u.dni}</p>
+								${u.email ? `<p class="text-[10px] text-gray-500 font-bold flex items-center gap-1"><i data-lucide="mail" class="w-3 h-3"></i> ${u.email}</p>` : ''}
+							</div>
+						</div>
+					</div>
+
+					<!-- Rol / Especialidad -->
+					<div class="flex flex-wrap items-center gap-6 md:justify-center border-t md:border-t-0 md:border-l border-white/5 pt-3 md:pt-0 md:pl-6">
+						<div class="min-w-[150px]">
+							<p class="text-[9px] text-gray-500 font-black uppercase tracking-widest mb-1 flex items-center gap-1">
+								<i data-lucide="${icon}" class="w-3 h-3 text-red-600"></i> ${roleLabel}
+							</p>
+							<p class="text-[11px] font-black uppercase italic text-white truncate max-w-[200px]">${roleValue}</p>
+						</div>
+					</div>
+
+					<!-- Acciones -->
+					<div class="flex items-center justify-end border-t md:border-t-0 md:border-l border-white/5 pt-3 md:pt-0 md:pl-6 min-w-[100px]">
+						<button onclick="openEditStaff(${u.id}, '${type}')" class="px-5 py-2.5 bg-white/5 text-white rounded-xl text-[10px] font-black uppercase italic hover:bg-white/10 hover:text-red-500 transition-all flex items-center gap-2 shadow-lg action-col">
+							<i data-lucide="settings-2" class="w-3.5 h-3.5"></i>
+							<span>Editar</span>
+						</button>
+					</div>
+				</div>`;
+			}
 		
 		function createAlumnoRow(a, type) {
 			// Datos y formateo
