--- a/index.html
+++ b/index.html
@@ -2414,14 +2414,58 @@ async function renderRutinas() {
         }
 
         async function loadClases() {
-            const data = await apiFetch('/clases'); state.clases = Array.isArray(data) ? data : [];
-            const hideEdit = (state.user?.rol_nombre === "Profesor" || state.user?.rol_nombre === "Administracion" || state.user?.rol_nombre === "Alumno");
-            const isAdmin = (state.user?.rol_nombre === "Administrador" || state.user?.rol_nombre === "Supervisor");
-            document.getElementById('clases-container').innerHTML = state.clases.map(c => `<div class="glass-card p-8 rounded-[2.5rem] relative text-left">${hideEdit ? '' : `<button onclick="openEditClase(${c.id})" class="absolute top-4 right-4 text-gray-600 hover:text-red-600"><i data-lucide="settings" class="w-4 h-4"></i></button>`}<div class="flex items-center gap-2 mb-2"><div class="w-3 h-3 rounded-full" style="background-color: ${c.color || '#FF0000'}"></div><h4 class="text-lg font-black uppercase italic">${c.nombre}</h4></div><p class="text-[11px] font-black text-red-600 uppercase italic">Coach: ${c.coach || 'Vikingo'}</p><div class="flex justify-between items-center mt-4"><p class="text-[10px] text-gray-500 font-bold uppercase">Cupo: ${state.reservas.filter(r => r.clase_id === c.id).length}/${c.capacidad_max || 40}</p>${isAdmin ? `<button onclick="openInscriptos(${c.id})" class="text-[10px] font-black viking-red uppercase underline italic">Ver Inscriptos</button>` : ''}</div></div>`).join('');
-            lucide.createIcons();
-            if(document.getElementById('view-calendario').classList.contains('active')) renderCalendar();
-            applyPermissions();
-        }
+			// 1. Pedir datos al servidor
+			const data = await apiFetch('/clases'); 
+			state.clases = Array.isArray(data) ? data : [];
+
+			// 2. Localizar el contenedor en el HTML
+			const container = document.getElementById('clases-container');
+			if (!container) return;
+
+			// 3. Si no hay clases, mostrar mensaje de vacío
+			if (state.clases.length === 0) {
+				container.innerHTML = `
+					<div class="col-span-3 p-16 border border-dashed border-white/10 rounded-[3rem] text-center bg-white/2">
+						<p class="text-[12px] text-gray-600 font-black uppercase italic tracking-[0.2em]">No hay clases configuradas</p>
+						<p class="text-[10px] text-gray-700 mt-2 font-bold">Usa el botón "Alta de Clase" para comenzar.</p>
+					</div>`;
+			} else {
+				// 4. Dibujar las tarjetas (Solo con info técnica y botón de editar)
+				const canEdit = (state.user?.rol_nombre === "Administrador" || state.user?.rol_nombre === "Supervisor");
+				
+				container.innerHTML = state.clases.map(c => `
+					<div class="glass-card p-6 rounded-[2.5rem] border-white/5 flex flex-col justify-between hover:border-red-600/20 transition-all group">
+						<div>
+							<div class="flex items-center gap-4 mb-6">
+								<!-- Icono con el color de la clase -->
+								<div class="w-12 h-12 rounded-2xl flex items-center justify-center font-black text-black text-sm italic shadow-lg" style="background-color: ${c.color || '#FF0000'}">
+									${c.nombre ? c.nombre[0].toUpperCase() : '?'}
+								</div>
+								<div>
+									<h4 class="text-sm font-black uppercase italic text-white group-hover:text-red-500 transition-colors">${c.nombre}</h4>
+									<p class="text-[10px] text-gray-500 font-bold uppercase tracking-wider flex items-center gap-1">
+										<i data-lucide="user" class="w-3 h-3"></i> ${c.coach || 'Sin Coach'}
+									</p>
+								</div>
+							</div>
+						</div>
+
+						<!-- Botón de edición: Solo aparece para Admin/Supervisor -->
+						${canEdit ? `
+						<button onclick="openEditClase(${c.id})" class="w-full py-4 bg-white/5 text-white rounded-2xl text-[10px] font-black uppercase italic hover:bg-white/10 hover:text-red-600 transition-all flex items-center justify-center gap-2 border border-white/5">
+							<i data-lucide="settings-2" class="w-3.5 h-3.5"></i>
+							Configuración Técnica
+						</button>
+						` : '<p class="text-[9px] text-gray-700 italic text-center">Solo lectura</p>'}
+					</div>
+				`).join('');
+			}
+
+			// 5. Refrescar iconos y otros componentes
+			lucide.createIcons();
+			if(document.getElementById('view-calendario')?.classList.contains('active')) renderCalendar();
+			applyPermissions();
+		}
 
         function openModalAlumno() { document.getElementById('modal-alumno-title').innerText = "Nuevo Alumno"; document.getElementById('al-id').value = ""; document.getElementById('al-fecha-renovacion').value = new Date().toISOString().split('T')[0]; openModal('modal-alumno'); }
         function openEditAlumno(id) {
